--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -2,11 +2,7 @@
     <label class="label">{{ label }}</label>
 </div>
 <div class="control">
-    <input 
-    class="input"
-     [formControl]="control" 
-     [ngClass]="{'is-danger': showErrors()}"
-     />
+    <input class="input" [formControl]="control" [ngClass]="{'is-danger': showErrors()}" />
 </div>
 <ng-container *ngIf="showErrors()">
     <div class="help is-danger" *ngIf="control.errors.required">Value ist required</div>
